<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>594</width>
    <height>563</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QTabWidget" name="tabWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>5</y>
     <width>551</width>
     <height>551</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>0</number>
   </property>
   <widget class="QWidget" name="tab">
    <attribute name="title">
     <string>Regiones/Zonas Activas</string>
    </attribute>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>541</width>
       <height>561</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>Formulario de Regiones/Zonas App.</string>
        </property>
        <widget class="QLineEdit" name="lineEdit_nombre_region_zona">
         <property name="geometry">
          <rect>
           <x>130</x>
           <y>20</y>
           <width>340</width>
           <height>20</height>
          </rect>
         </property>
        </widget>
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
           <x>15</x>
           <y>25</y>
           <width>110</width>
           <height>13</height>
          </rect>
         </property>
         <property name="text">
          <string>Nombre Región/Zona:</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_3">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>115</y>
           <width>110</width>
           <height>13</height>
          </rect>
         </property>
         <property name="text">
          <string>Imagen Región/Zona:</string>
         </property>
        </widget>
        <widget class="QLineEdit" name="lineEdit_ruta_imagen_region_zona">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>160</y>
           <width>500</width>
           <height>20</height>
          </rect>
         </property>
        </widget>
        <widget class="QLabel" name="label_4">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>73</y>
           <width>190</width>
           <height>13</height>
          </rect>
         </property>
         <property name="text">
          <string>Orden de ubicacion de la Región/Zona:</string>
         </property>
        </widget>
        <widget class="QPushButton" name="btnAgregarRegionZona">
         <property name="geometry">
          <rect>
           <x>30</x>
           <y>190</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Agregar</string>
         </property>
        </widget>
        <widget class="QPushButton" name="btnModificarRegionZona">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="geometry">
          <rect>
           <x>120</x>
           <y>190</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Modificar</string>
         </property>
        </widget>
        <widget class="QPushButton" name="btnDesactivarRegionZona">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="geometry">
          <rect>
           <x>320</x>
           <y>190</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Desactivar</string>
         </property>
        </widget>
        <widget class="QPushButton" name="btnLimpiarFormulario">
         <property name="geometry">
          <rect>
           <x>410</x>
           <y>190</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Limpiar</string>
         </property>
        </widget>
        <widget class="QTableWidget" name="Tabla_RegionZona_activas">
         <property name="geometry">
          <rect>
           <x>10</x>
           <y>220</y>
           <width>520</width>
           <height>300</height>
          </rect>
         </property>
         <property name="editTriggers">
          <set>QAbstractItemView::NoEditTriggers</set>
         </property>
         <attribute name="horizontalHeaderVisible">
          <bool>true</bool>
         </attribute>
         <attribute name="horizontalHeaderHighlightSections">
          <bool>true</bool>
         </attribute>
         <column>
          <property name="text">
           <string>id</string>
          </property>
          <property name="textAlignment">
           <set>AlignCenter</set>
          </property>
         </column>
         <column>
          <property name="text">
           <string>Nombre Región/Zona</string>
          </property>
          <property name="textAlignment">
           <set>AlignCenter</set>
          </property>
         </column>
         <column>
          <property name="text">
           <string>Orden aparición</string>
          </property>
          <property name="textAlignment">
           <set>AlignCenter</set>
          </property>
         </column>
         <column>
          <property name="text">
           <string>Ruta en disco Imagen</string>
          </property>
          <property name="textAlignment">
           <set>AlignCenter</set>
          </property>
         </column>
        </widget>
        <widget class="QPushButton" name="btnCerrar">
         <property name="geometry">
          <rect>
           <x>494</x>
           <y>10</y>
           <width>31</width>
           <height>31</height>
          </rect>
         </property>
         <property name="styleSheet">
          <string notr="true">border : none;</string>
         </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
          <iconset>
           <normaloff>../assets/iconos/cerrar.png</normaloff>../assets/iconos/cerrar.png</iconset>
         </property>
         <property name="iconSize">
          <size>
           <width>32</width>
           <height>32</height>
          </size>
         </property>
        </widget>
        <widget class="QPushButton" name="btnImagenRegionZona">
         <property name="geometry">
          <rect>
           <x>130</x>
           <y>110</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Buscar Imagen</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_imagen_region_zona">
         <property name="geometry">
          <rect>
           <x>310</x>
           <y>50</y>
           <width>104</width>
           <height>104</height>
          </rect>
         </property>
         <property name="minimumSize">
          <size>
           <width>104</width>
           <height>104</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>110</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">border: 2px solid gray;
border-radius: 50px;
min-width: 100px;
min-height: 100px;
</string>
         </property>
         <property name="text">
          <string/>
         </property>
        </widget>
        <widget class="QSpinBox" name="spinBox_orden_region_zona">
         <property name="geometry">
          <rect>
           <x>210</x>
           <y>70</y>
           <width>42</width>
           <height>22</height>
          </rect>
         </property>
         <property name="value">
          <number>1</number>
         </property>
        </widget>
        <widget class="QPushButton" name="btnEliminarRegionZona">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="geometry">
          <rect>
           <x>220</x>
           <y>190</y>
           <width>80</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Eliminar</string>
         </property>
        </widget>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
   <widget class="QWidget" name="tab_2">
    <attribute name="title">
     <string>Regiones/Zonas Inactivas</string>
    </attribute>
    <widget class="QTableWidget" name="Tabla_RegionZona_inactivas">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>20</y>
       <width>501</width>
       <height>371</height>
      </rect>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <attribute name="horizontalHeaderVisible">
      <bool>false</bool>
     </attribute>
     <attribute name="horizontalHeaderHighlightSections">
      <bool>true</bool>
     </attribute>
     <column>
      <property name="text">
       <string>id Usuario</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Nombre</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>D.N.I</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Domicilio</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Localidad</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Provincia</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Teléfono</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Email</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Usuario</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Contraseña</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Ruta Foto</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Rol</string>
      </property>
      <property name="textAlignment">
       <set>AlignCenter</set>
      </property>
     </column>
    </widget>
    <widget class="QPushButton" name="btnReactivarRegionZona">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>210</x>
       <y>400</y>
       <width>141</width>
       <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>Reactivar Región/Zona</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <tabstops>
  <tabstop>tabWidget</tabstop>
  <tabstop>lineEdit_nombre_region_zona</tabstop>
  <tabstop>spinBox_orden_region_zona</tabstop>
  <tabstop>btnImagenRegionZona</tabstop>
  <tabstop>lineEdit_ruta_imagen_region_zona</tabstop>
  <tabstop>btnAgregarRegionZona</tabstop>
  <tabstop>btnModificarRegionZona</tabstop>
  <tabstop>btnEliminarRegionZona</tabstop>
  <tabstop>btnDesactivarRegionZona</tabstop>
  <tabstop>btnLimpiarFormulario</tabstop>
  <tabstop>Tabla_RegionZona_activas</tabstop>
  <tabstop>btnCerrar</tabstop>
  <tabstop>Tabla_RegionZona_inactivas</tabstop>
  <tabstop>btnReactivarRegionZona</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
